--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/app/*": ["./src/app/*"],
+      "@/database/*": ["./src/database/*"],
       "@/utils/*": ["./src/utils/*"],
     }
   }
