--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,9 +29,7 @@
             "error",
             "always"
         ],
-        "no-unused-vars": [
-            "error"
-        ],
+        "@typescript-eslint/no-unused-vars": [ "error" ],
         "prettier/prettier": [
             "error",
             {
